# storyscript

./: .gitignore  PLAN.md  README.md
.github/skills/storyscript-feature-spec-guard/: SKILL.md
example/: branch_if_else_checkpoint.StoryScript  decimal_integer_mixed_ops.StoryScript  feature_logic_functions.StoryScript  feature_math_rand_pick_showcase.StoryScript  interpolation_variable_read.StoryScript  long_narrative_the_drowned_archive.StoryScript  loop_until_beacon_repair.StoryScript  math_feature_trade_route.StoryScript  nested_branch_vault_gate.StoryScript  the_last_signal.StoryScript
parser/rust/: Cargo.toml
parser/rust/src/: ast.rs  compiler.rs  diagnostic.rs  interpolation.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  validator.rs
player/: Cargo.toml
player/src/: engine.rs  main.rs  runtime.rs
storyscript_player_core/example/: pubspec.yaml
storyscript_player_core/example/asset/: penjaga_terakhir_kerajaan_aruna.StoryScript
storyscript_player_core/example/lib/: main.dart
storyscript_player_core/lib/src/editor/: code_highlighter_engine.dart  code_highlighter_theme.dart
storyscript_player_core/rust/: Cargo.toml
storyscript_player_core/rust/src/api/: player.rs
tool/vscode-storyscript/: README.md  language-configuration.json  package.json  tsconfig.json
tool/vscode-storyscript/client/: tsconfig.json
tool/vscode-storyscript/client/src/: extension.ts
tool/vscode-storyscript/server/: tsconfig.json
tool/vscode-storyscript/server/src/: completions.ts  definition.ts  hover.ts  (+3 more)
tool/vscode-storyscript/syntaxes/: storyscript.tmLanguage.json
