[package]
name = "storyscript-player"
version = "0.1.0"
edition = "2024"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
storyscript-parser = { path = "../parser/rust" }
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }
rust_decimal = "1.41.0"
rand = "0.10.1"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[[bin]]
name = "storyscript-player"
path = "src/main.rs"
required-features = ["tui"]
